2017-07-26  Peter Stephenson  <p.stephenson@samsung.com>

	* Jim: 41461: Doc/Zsh/seealso.yo: complete list of zsh manual
	pages in introduction.

2017-07-20  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 41433: Doc/Zsh/expn.yo: Further clarification about expansion
	processing.

2017-07-17  Peter Stephenson  <p.stephenson@samsung.com>

	* 41429: Doc/Zsh/expn.yo: Better documentation of how stages of
	expansion fit together.

2017-07-15  Oliver Kiddle  <opk@zsh.org>

	* 41432: Completion/Unix/Command/_xz: use option grouping

	* 41431: Completion/Linux/Command/_lsblk,
	Completion/Linux/Command/_ss, Completion/Linux/Command/_strace,
	Completion/Unix/Command/_diffstat, Completion/Unix/Command/_dig,
	Completion/Unix/Command/_dmidecode, Completion/Unix/Command/_irssi,
	Completion/Unix/Command/_gsettings, Completion/Unix/Command/_ssh,
	Completion/X/Command/_xclip: update options in assorted completions

2017-07-14  Oliver Kiddle  <opk@zsh.org>

	* Fabian Klötzl: 41414: Completion/Linux/Command/_iptables,
	Completion/Unix/Command/_gcc, Completion/Unix/Command/_git,
	Etc/completion-style-guide: fix for commas used in exclusion
	lists, missing escape for _gcc and --no-index option for git diff

	* 41419: Completion/Unix/Command/_git: update for git 2.13.2

2017-07-13  Peter Stephenson  <p.stephenson@samsung.com>

	* 41420: Src/glob.c, Test/D09brace.ztst: "{.." wasn't checked
	properly.

2017-07-11  Peter Stephenson  <p.stephenson@samsung.com>

	* Marcin Mielniczuk: 41409: Completion/Unix/Command/_django:
	complete "django startproject".

2017-07-09  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Config/version.mk: update dev version due to
	wordcode changes.

	* Sebastian: 41402: Src/parse.c: Delay checking tokens in
	ecstrcode() as may not be needed.

	* Sebastian: 41402: Src/parse.c, Src/zsh.h: Add hasher to
	ecstrcode() to reduce string comparisons.

2017-07-04  Peter Stephenson  <p.stephenson@samsung.com>
